Fix y-axis spacing issue on smaller screens

--- a/style.css
+++ b/style.css
@@ -29,7 +29,6 @@
   /* shadows */
   --shadow-text: 1px 1px 2px rgba(0, 0, 0, 0.162);
   --shadow-card: 2px 8px 20px 0 rgba(0, 0, 0, 0.133);
-
 }
 
 *,
@@ -127,6 +126,7 @@ main {
 
 .container {
   width: min(85%, 40em);
+  margin: 1.6em auto;
 }
 
 .rounded-xs {
